# winmux

./: .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  FOLLOWUPS.md  PROGRESS.txt  README.md  SECURITY.md  build-and-verify.ps1  build-cmux-A-test.ps1  manifest.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
app/: index.html  package-lock.json  package.json  tsconfig.json
app/scripts/: build-linux-cli.ps1  build-release.ps1
app/src/: AddonsTab.tsx  AddonsWindow.tsx  App.css  App.tsx  BrowserPane.tsx  BrowserWindow.tsx  ClaudeChatPane.tsx  ClaudeLogPane.tsx  ClaudeUsageIndicator.tsx  CommandPalette.tsx  ConnectExistingFlow.tsx  ConnectExistingWizard.tsx  CreateWorkspaceModal.tsx  DiffPane.tsx  Divider.tsx  FeedPanel.tsx  FileEditor.tsx  FileManagerPane.tsx  FileManagerWindow.tsx  HelpPane.tsx  HygienePanel.tsx  InsightsWindow.tsx  LayoutView.tsx  MarkdownViewer.tsx  MobilePairing.tsx  NotesModal.tsx  NotificationCenter.tsx  PaneView.tsx  PanelChrome.tsx  PanelFloat.tsx  PanelSurface.tsx  PortsPanel.tsx  PortsWindow.tsx  ProvisioningWizard.tsx  SettingsModal.tsx  SideDrawer.tsx  Sidebar.tsx  SshKeyOfferModal.tsx  TechText.tsx  VersionManager.tsx  (+22 more)
app/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json  popout.json
app/src-tauri/cli/: Cargo.toml  build.rs
app/src-tauri/cli/src/: hooks.rs  main.rs  port_watch.rs
app/src-tauri/crates/winmux-addons/: Cargo.toml
app/src-tauri/crates/winmux-addons/src/: lib.rs
app/src-tauri/crates/winmux-bootstrap/: Cargo.toml
app/src-tauri/crates/winmux-bootstrap/src/: lib.rs
app/src-tauri/crates/winmux-core/: Cargo.toml
app/src-tauri/crates/winmux-core/src/: http.rs  lib.rs
app/src-tauri/crates/winmux-policy/: Cargo.toml
app/src-tauri/crates/winmux-policy/src/: lib.rs
app/src-tauri/crates/winmux-ssh/: Cargo.toml
app/src-tauri/crates/winmux-ssh/src/: lib.rs
app/src-tauri/crates/winmux-tunnel/: Cargo.toml
app/src-tauri/crates/winmux-tunnel/src/: lib.rs
app/src-tauri/crates/winmux-types/: Cargo.toml
app/src-tauri/crates/winmux-types/src/: lib.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/insights/: api.go  chat_api.go  chat_devices.go  chat_devices_test.go  chat_helpers.go  chat_hookrpc.go  chat_hookrpc_test.go  chat_pairing.go  chat_pairing_test.go  chat_parser.go  chat_parser_test.go  chat_session.go  chat_store.go  docker.go  docker_test.go  go.mod  go.sum  hygiene.go  hygiene_test.go  logjanitor_test.go  main.go  sampler.go  sampler_test.go  store.go  util.go
app/src-tauri/mcp/: Cargo.toml
app/src-tauri/mcp/src/: main.rs
app/src-tauri/resources/: remote-manifest.json  winmux-linux-x64  winmux-tmux.conf
app/src-tauri/server/: go.mod  go.sum
app/src-tauri/server/cmd/winmux-server/: main.go
app/src-tauri/server/internal/api/: api.go  api_test.go  asyncapi.json  huma.go  integration_test.go  mobile.go  openapi.json  spec_test.go
app/src-tauri/server/internal/auth/: auth.go  scopes.go  scopes_test.go
app/src-tauri/server/internal/chat/: bridge.go  bridge_test.go  chat_api.go  chat_fcm.go  chat_helpers.go  chat_hookrpc.go  chat_hookrpc_test.go  chat_pairing.go  chat_pairing_test.go  chat_parser.go  chat_parser_test.go  chat_push.go  chat_scopes.go  chat_scopes_test.go  chat_session.go  chat_store.go
app/src-tauri/server/internal/config/: config.go  config_test.go  migrate.go  migrate_test.go  path.go  path_test.go
app/src-tauri/server/internal/core/: core.go
app/src-tauri/server/internal/fcm/: fcm.go  fcm_test.go
app/src-tauri/server/internal/files/: files.go  huma.go  local.go  local_test.go  service.go  service_test.go
app/src-tauri/server/internal/hooks/: hooks.go
app/src-tauri/server/internal/insights/: docker.go  docker_test.go  hygiene.go  hygiene_test.go  sampler.go  sampler_test.go  service.go  store.go
app/src-tauri/server/internal/logs/: huma.go  logs.go  logs_test.go  service.go  store.go
app/src-tauri/server/internal/push/: push.go  push_test.go
app/src-tauri/server/internal/workspace/: frames.go  frames_test.go  hook_forward_test.go  manager.go  model.go  push_test.go  service.go  store.go  workspace.go  workspace_test.go  ws.go  ws_test.go
app/src-tauri/src/: addons.rs  bidi_filter.rs  browser_pane.rs  claude_chat.rs  claude_log.rs  claude_summary.rs  claude_usage.rs  connect_wizard.rs  dev.rs  diff_pane.rs  file_manager.rs  insights_local.rs  lib.rs  local_wizard.rs  notes.rs  osc_notify.rs  pairing.rs  provisioning.rs  remote_bootstrap.rs  rpc_server.rs  settings.rs  stt.rs  tray.rs  tunnel.rs  updater.rs  webview_pane.rs  winmux_bridge.js  workspace_browser.rs
app/src/bindings/: AddonAction.ts  AddonManifest.ts  AddonStatus.ts  AnsiPalette.ts  BrowserState.ts  ClaudeOptions.ts  ClaudeUsage.ts  ClaudeUsageSettings.ts  ConnectExistingInput.ts  ConnectExistingResult.ts  Connection.ts  DiffSource.ts  EnvVar.ts  FeedItem.ts  FeedItemState.ts  FloatingWindowMode.ts  FloatingWindowState.ts  FloatingWindows.ts  Font.ts  HookSettings.ts  HookType.ts  Hooks.ts  HooksUpdates.ts  I18n.ts  LayoutNode.ts  LogsSettings.ts  Rect.ts  (+15 more)
docs/: ADR.md  ARCHITECTURE.md  BUILD.md  CLI.md  COMPETITIVE-SCAN.md  CONFIG.md  CONTRIBUTING.md  DECISIONS.md  DESIGN-PASS-01.md  IDEAS-RANKING.md  INSTALL_AGENTS.md  MODULES.md  MOUSE-DEBUG.md  PHASE-68-DESIGN.md  PHASE-69-DESIGN.md  PHASE-70-DESIGN.md  PHASE-74-DESIGN.md  PHASE-77-DESIGN.md  PHASE-77-SMOKE-TEST.md  PROTOCOLS.md  PUSH-PROTOCOL.md  RELEASING.md  RTL-TEST.md  SECRETS-VAULT-RESEARCH.md  SECURITY.md  V0.4.4-SMOKE-TEST.md
docs/winmux-server/: API.md  CLIENTS.md  DEPLOYMENT.md  README.md  UPGRADE.md
hooks/: claude-code.json  codex.json  gemini.json
sdk-gen/: README.md  ci-check.mjs  emit-specs.mjs  gen-kotlin.mjs  gen-typescript.mjs  package-lock.json  package.json
sdk-gen/specs/: frames.schema.json  openapi.json
sdk/kotlin/: build.gradle.kts  settings.gradle.kts
sdk/typescript/: package-lock.json  package.json  tsconfig.json
(+24 files in other folders)
