[workspace]
members = [".", "cli", "mcp"]
resolver = "2"

[package]
name = "app"
version = "0.1.0"
description = "winmux"
authors = ["yossi"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2"
async-trait = "0.1"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
dirs = "5"
notify-rust = "4"
whoami = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"
