[workspace]
members = [".", "cli", "mcp", "crates/winmux-types", "crates/winmux-core", "crates/winmux-tunnel", "crates/winmux-bootstrap", "crates/winmux-ssh", "crates/winmux-policy", "crates/winmux-addons"]
resolver = "2"

# Pre-public hardening: strip symbols from release builds. The
# `--remap-path-prefix` rustflags in `.cargo/config.toml` scrub the
# developer's $HOME from any embedded panic-location strings — those
# come from `file!()` macros in the dependency tree and are NOT debug
# symbols, so `strip` alone doesn't cover them.
[profile.release]
strip = "symbols"

[package]
name = "app"
version = "0.4.3"
description = "winmux"
authors = ["yossi"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Pinned + unstable feature for tauri::Window::add_child (multi-webview
# support for Phase 53 browser-per-workspace). The "unstable" feature
# gate is Tauri's documented path for multi-webview in 2.x. Manual
# review required before any version bump — `Window::add_child`'s
# signature can change between minors.
tauri = { version = "=2.10.3", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase 65: zero sensitive bytes (initial SSH password) in memory after
# use — CLAUDE.md Rule #2.
zeroize = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2"
async-trait = "0.1"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
dirs = "5"
notify-rust = "4"
whoami = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"
# v0.2.3: native HTTPS client for the updater. Pure-Rust TLS via rustls
# (default) — avoids SChannel which some AV/EDR products intercept and
# break (root cause of the v0.2.2 "Check now" parser-error symptom).
ureq = { version = "2", features = ["tls", "json"] }
# Phase 35 (#1.5): generate TypeScript type bindings from Rust structs.
# `cargo test` regenerates app/src/bindings/*.ts; the frontend imports
# from there instead of hand-mirroring the data model.
ts-rs = "8"
# Phase 51.A (#3.1): pure data types live in a sub-crate so future
# splits can depend on the type-set without dragging in tauri.
winmux-types = { path = "crates/winmux-types" }
# Phase 51.B: cross-cutting infra (dlog, shell_quote, helpers).
# Landing in incremental sub-commits (51.B1, 51.B2, …); only the
# lowest-coupling pieces live here initially.
winmux-core = { path = "crates/winmux-core" }
# Phase 51.C: HMAC handshake + bridge_to_pipe (the reverse-tunnel).
winmux-tunnel = { path = "crates/winmux-tunnel" }
# Phase 51.D: remote CLI bootstrap (russh+sftp deploy logic).
winmux-bootstrap = { path = "crates/winmux-bootstrap" }
# Phase 51.H: SSH auth primitives (try_authenticate + try_agent_auth).
winmux-ssh = { path = "crates/winmux-ssh" }
# Phase 66: shared 3-state tool-permission policy engine (auto/gate/block).
winmux-policy = { path = "crates/winmux-policy" }
# Phase 68.A: add-on manifest schema + registry (ts feature → bindings).
winmux-addons = { path = "crates/winmux-addons", features = ["ts"] }
# Phase 57: zip/unzip on the local side of the file manager. Default
# features include `deflate` which covers the common-case .zip
# everyone produces; AES + Bzip2 + Zstd are turned off to keep the
# binary lean — agents we package don't routinely emit those.
zip = { version = "2", default-features = false, features = ["deflate", "time"] }

[dev-dependencies]
# Phase 50 (#2.4): integration test for diff_pane::fetch_diff against a
# real git repo seeded under a temporary directory.
tempfile = "3"
