[package]
name = "winmux"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "winmux"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
whoami = "1"
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
