[package]
name = "winmux-mcp"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "winmux-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "time"] }
whoami = "1"
