[package]
name = "winmux-bootstrap"
version = "0.0.0"
edition = "2021"
publish = false
description = "Phase 51.D: deploy the Linux winmux CLI to a remote SSH server (no tauri dep)"

[dependencies]
winmux-core = { path = "../winmux-core" }
russh = "0.49"
russh-sftp = "2"
tokio = { version = "1", features = ["sync", "rt", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
