[package]
name = "winmux-core"
version = "0.0.0"
edition = "2021"
publish = false
description = "Phase 51.B: core infrastructure shared across the winmux backend"

[dependencies]
# Pure data types — already extracted in 51.A.
winmux-types = { path = "../winmux-types" }
# Config-dir resolution for the debug-log path.
dirs = "5"
# Phase 51.B2: russh handler impl + known_hosts persistence.
russh = "0.49"
russh-keys = "0.49"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
