[package]
name = "winmux-core"
version = "0.0.0"
edition = "2021"
publish = false
description = "Phase 51.B: core infrastructure shared across the winmux backend"

[dependencies]
# Pure data types — already extracted in 51.A.
winmux-types = { path = "../winmux-types" }
# Config-dir resolution for the debug-log path.
dirs = "5"
# Phase 51.B2: russh handler impl + known_hosts persistence.
russh = "0.49"
russh-keys = "0.49"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
# Phase 51.B3: Session/SshSession/ForwardEntry runtime types.
tokio = { version = "1", features = ["sync", "rt", "macros"] }
portable-pty = "0.8"
# Phase 51.C: pipe_name resolution for the Named Pipe RPC endpoint.
whoami = "1"
# beta.3 (netfree): get_with_retry lives here (http.rs). native-tls so the
# updater trusts the Windows Certificate Store (Netfree root cert). Must
# match the app crate's ureq feature set to keep one resolved version.
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
