[package]
name = "winmux-ssh"
version = "0.0.0"
edition = "2021"
publish = false
description = "Phase 51.H: pure SSH authentication primitives (no AppState dependency)"

[dependencies]
winmux-core = { path = "../winmux-core" }
russh = "0.49"
russh-keys = "0.49"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
