[package]
name = "winmux-tunnel"
version = "0.0.0"
edition = "2021"
publish = false
description = "Phase 51.C: HMAC handshake + reverse-tunnel bridge to the Named Pipe RPC server"

[dependencies]
winmux-core = { path = "../winmux-core" }
russh = "0.49"
tokio = { version = "1", features = ["sync", "rt", "io-util", "macros", "net"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"
